welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (a%10==b%10) {
  ^